2.1.2
=====
- Disabled integration with RequestDataValueProcessor when Spring version is >= 4.x in order to
  avoid exceptions (due to interface changes between spring 3.2 and 4.0).


2.1.1
=====
- Fixed incorrect Spring object binding of single-level (no x.y field) expressions, resulting in
  ConversionService not being applied on certain scenarios.


2.1.0 (from 2.0.19)
===================
(See What's New in Thymeleaf 2.1 at http://www.thymeleaf.org/whatsnew21.html)
- New Feature: More integrated acccess to beans from expressions
- New Feature: Integration of Spring type conversion infrastructure
- New Feature: Spring-resource based template resolver
- New Feature: Render view fragments directly from controllers
- New Feature: New th:errorclass for adding CSS class to form fields in error
- New Feature: Additional form validation error reporting options
- New Feature: Transparent integration with Spring's RequestDataValueProcessor


2.0.19
======
- Applied annotation-based autowiring to custom Thymeleaf View classes even when they were not declared as a bean
  at the application context.
- Implemented size() and isEmpty() in "beans" map in context variables.


2.0.18
======
- (No changes)


2.0.17
======
- Added a "#themes.code('key')" expression object which looks up and returns the value of
  'key' in the current Spring theme's properties file.  This is the equivalent of Spring's
  <spring:theme code='key'> JSP tag.
- Fixed <input> tags with no "type" attribute not being treated as type="text" (which they should).
- Fixed form error messages output with th:errors not being escaped and provoking a parsing error
  if they contained <, >, &, etc.


2.0.16
======
- Automatically add @PathVariable's to model when using Spring 3.1 or newer. 
- Forbidden the inclusion of request parameter variables ('param.*') in preprocessing expressions
  and th:utext attribute values.


2.0.15
======