@@ -2,6 +2,8 @@
 =====
 - Disabled integration with RequestDataValueProcessor when Spring version is >= 4.x in order to
   avoid exceptions (due to interface changes between spring 3.2 and 4.0).
+- Fixed marker hidden inputs being added for checkboxes and multiple selects even when they are
+  disabled (provoking undesired deletion of attribute values).
 
 
 2.1.1
